precompiles/macro/tests/compile-fail/precompile/discriminant/missing-param.stderr
error: The discriminant function must only take code address (H160) and remaining gas (u64) as parameters.
  --> tests/compile-fail/precompile/discriminant/missing-param.rs:27:2
   |
27 |     fn discriminant() -> Option<u64> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
